Removed warnings
Hopefully the app still runs